--- a/package.json
+++ b/package.json
@@ -9,10 +9,10 @@
     "build": "vite build",
     "preview": "vite preview",
     "pack": "electron-builder --dir",
-    "dist": "vite build && electron-builder"
+    "dist": "vite build && electron-builder",
+    "electron:build": "vite build && electron-builder"
   },
   "dependencies": {
-    "@electron/remote": "^2.0.12",
     "axios": "^1.6.0",
     "chardet": "^2.0.0",
     "cors": "^2.8.5",
@@ -24,9 +24,11 @@
     "iconv-lite": "^0.6.3",
     "multer": "^1.4.5-lts.1",
     "sqlite3": "^5.1.7",
-    "vue": "^3.3.0"
+    "vue": "^3.3.0",
+    "xlsx": "^0.18.5"
   },
   "devDependencies": {
+    "@electron/remote": "^2.1.2",
     "@vitejs/plugin-vue": "^4.6.2",
     "cross-env": "^7.0.3",
     "electron": "^28.3.3",
@@ -34,5 +36,54 @@
     "sass": "^1.69.0",
     "vite": "^5.0.0",
     "vite-plugin-electron": "^0.29.0"
+  },
+  "build": {
+    "appId": "com.qgenwindsurf.app",
+    "productName": "AI智能题库开发工具",
+    "directories": {
+      "output": "dist_electron"
+    },
+    "win": {
+      "target": [
+        {
+          "target": "nsis",
+          "arch": ["x64"]
+        }
+      ],
+      "icon": "build/icon.ico"
+    },
+    "nsis": {
+      "oneClick": false,
+      "allowToChangeInstallationDirectory": true,
+      "createDesktopShortcut": true,
+      "createStartMenuShortcut": true,
+      "shortcutName": "AI智能题库开发工具"
+    },
+    "files": [
+      "dist/**/*",
+      "main.js",
+      "server.js",
+      "server-db.js",
+      "package.json"
+    ],
+    "extraResources": [
+      {
+        "from": "node_modules",
+        "to": "node_modules",
+        "filter": ["**/*"]
+      },
+      {
+        "from": ".",
+        "to": "app.asar",
+        "filter": [
+          "package.json",
+          "main.js",
+          "server.js",
+          "server-db.js",
+          "dist/**/*"
+        ]
+      }
+    ],
+    "asar": true
   }
 }
